# FSTool

./: .gitignore  LICENSE  README.md  main.cpp  prog
CMake/: CMakeLists.txt
cmake/: CMakeLists.txt
doc/: exceptions.txt
examples/: buffMethods.cpp
include/: FSTbase.h  FSTool.h  file.h  folder.h
src/: FSTbase.cpp  FSTbase.h  FSTool.cpp  FSTool.h  file control.h  file.cpp  file.h  folder.cpp  folder.h
test/: 12.txt  FSTbase.h  file.cpp  file.h  folder.cpp  folder.h  main.cpp  prog
test/1/: 1
test/2/: 3.txt
